<resources>
    <string name="app_name">OOTD</string>
    <string name="text">New to the app? Click here     to make an account!</string>
    <string name="password">Password:</string>
    <string name="username">Username:</string>
    <string name="login">login</string>
    
    <string name="first">First Name:</string>
    <string name="last">Last Name:</string>
    <string name="email">E-mail:</string>
    <string name="enable">Enable:</string>
    <string name="gender">Gender:</string>
    <string name="checkone">Female</string>
    <string name="checktwo">Male</string>
    <string name="checkthree">Location for weather services and forecast</string>
    <string name="checkfour">Phone to sync calendar and events</string>

    <string name="title">Choose from the list, your personal style:
                (Check all that apply)</string>
    <string name="comfylazy">Comfy/Lazy</string>
    <string name="casual">Casual</string>
    <string name="elegantclassy">Elegant/Classy</string>
    <string name="professional">Professional</string>

    <string name="home">Homescreen</string>
    <string name="settings">Settings</string>
    <string name ="edituser">Edit User Profile</string>
    <string name="editlocation">Edit Location</string>
    <string name="editclothes">Edit Personal Style</string>
    <string name="editwork">Edit Work Conditions</string>
    <string name="signout">Sign Out</string>
</resources>
