<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.cmperez.ootd.MainActivity"
    android:background="@color/colorPrimary">

    <TextView
        android:id="@+id/New"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text"
        android:typeface="serif"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:layout_marginBottom="17dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:id="@+id/userspace"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:inputType="textEmailAddress"
        android:ems="25"
        android:layout_marginBottom="111dp"
        android:layout_above="@+id/login"
        android:layout_toStartOf="@+id/login" />

    <TextView
        android:id="@+id/ootd"
        android:text="@string/app_name"
        android:textColor="@color/colorPrimaryDark"
        android:typeface="serif"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="45sp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginStart="47dp" />

    <Button
        android:id="@+id/click"
        android:text="Click Here"
        android:typeface="serif"
        android:textSize="22sp"
        android:textColor="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:layout_alignBaseline="@+id/New"
        android:layout_alignBottom="@+id/New"
        android:layout_toEndOf="@+id/ootd"
        android:layout_marginStart="18dp" />

    <TextView
        android:id="@+id/pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:typeface="serif"
        android:textSize="25sp"
        android:layout_above="@+id/passspace"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:background="@color/colorAccent"
        android:textColor="@color/colorPrimaryDark"
        android:layout_marginBottom="21dp"
        android:layout_above="@+id/click"
        android:layout_alignParentEnd="true" />

    <EditText
        android:id="@+id/passspace"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:inputType="textPassword"
        android:ems="25"
        android:focusable="true"
        android:layout_marginBottom="56dp"
        android:layout_alignBottom="@+id/login"
        android:layout_alignParentStart="true" />

    <ImageView
        android:id="@+id/picture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/images"
        android:layout_marginBottom="25dp"
        android:layout_above="@+id/username"
        android:layout_alignStart="@+id/click"
        android:layout_marginStart="17dp" />

    <TextView
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:typeface="serif"
        android:textSize="25sp"
        android:layout_above="@+id/userspace"
        android:layout_alignParentStart="true" />


</RelativeLayout>
